<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp">

        <com.view.MTextView
            android:id="@+id/headerTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_1sdp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_16"
            app:autoSizeMaxTextSize="@dimen/txt_size_16"
            app:autoSizeMinTextSize="@dimen/txt_size_14"
            app:customTypeFace="@string/system_semi_bold"
            tools:text="@string/app_name" />

        <com.view.MTextView
            android:id="@+id/subHeaderTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textColor="#202020"
            android:textSize="@dimen/_10ssp"
            app:customTypeFace="@string/system_regular"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="top|center"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deliveryRecycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </LinearLayout>
    </LinearLayout>
</layout>