<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_7sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/boxImage"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.view.MTextView
                        android:id="@+id/boxTitleTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="start"
                        android:includeFontPadding="false"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        app:customTypeFace="@string/system_semi_bold"
                        tools:text="@string/app_name" />

                    <com.view.MTextView
                        android:id="@+id/boxDescTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:includeFontPadding="false"
                        android:textColor="#202020"
                        android:textSize="@dimen/_10ssp"
                        app:customTypeFace="@string/system_regular"
                        tools:text="@string/app_name" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>