<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/bannerArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_20sdp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imagView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_155sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bannerArea"
            android:paddingTop="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical">

                <com.view.MTextView
                    android:id="@+id/TitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_13ssp"
                    app:customTypeFace="@string/system_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/subTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="center"
                    android:textColor="@color/textSub23Pro_gray"
                    android:textSize="@dimen/_12ssp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="@string/app_name" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/shadowHeaderView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_5sdp"
            android:layout_below="@+id/nestedScrollView"
            android:layout_marginTop="@dimen/_minus3sdp"
            android:background="@drawable/custom_shadow_header_1"
            android:rotation="180" />
    </RelativeLayout>
</RelativeLayout>