<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainArea"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cardViewBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_view_23_gray_flat"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/_46sdp"
                        android:layout_height="@dimen/_46sdp"
                        android:layout_marginStart="@dimen/_minus7sdp"
                        android:layout_marginTop="@dimen/_minus9sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@drawable/shape_circle_record"
                        android:backgroundTint="@color/white">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/bannerImgView"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:padding="@dimen/_12sdp"
                            app:srcCompat="@mipmap/ic_no_icon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.view.MTextView
                            android:id="@+id/txtCategoryName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:layout_marginTop="@dimen/_9sdp"
                            android:layout_marginEnd="@dimen/_3sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp"
                            app:customTypeFace="@string/system_bold"
                            tools:text="@string/app_name" />

                        <com.view.MTextView
                            android:id="@+id/txtCategoryOtherDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:textColor="@color/home23ProTitleTxtColor"
                            android:textSize="@dimen/_9ssp"
                            app:customTypeFace="@string/system_regular"
                            tools:text="saffsd fjsdgf dgfusygdfhbejwerguebhd fsdgfudsytfgsd gdgfusdg fuegfu gyew87rhfgbdugfds uyrt" />
                    </LinearLayout>
                </LinearLayout>

                <com.view.MTextView
                    android:id="@+id/txtCategoryDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/home23ProTitleTxtColor"
                    android:textSize="@dimen/_9ssp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="saffsd fjsdgf dgfusygdfhbejwerguebhd fsdgfudsytfgsd gdgfusdg fuegfu gyew87rhfgbdugfds uyrt" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_23_service_list_item" />
        </LinearLayout>
    </RelativeLayout>
</layout>